// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches the open sheet with an active doc 1`] = `
<div
  aria-labelledby="radix-_r_*_"
  class="fixed inset-x-0 bottom-0 z-50 flex max-h-[80vh] flex-col rounded-t-2xl bg-paper pb-[env(safe-area-inset-bottom)] shadow-xl md:hidden data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=open]:slide-in-from-bottom data-[state=closed]:slide-out-to-bottom duration-200"
  data-state="open"
  data-testid="mobile-more-sheet"
  id="radix-_r_*_"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <h2
    class="sr-only"
    id="radix-_r_*_"
  >
    More
  </h2>
  <div
    aria-hidden="true"
    class="mx-auto mt-2 h-1 w-9 rounded-full bg-rule"
  />
  <div
    class="min-h-0 flex-1 overflow-y-auto overscroll-contain"
  >
    <div
      class="pb-3"
    >
      <div
        data-testid="mobile-more-quick-settings"
      >
        <div
          class="font-mono uppercase tracking-[0.11em] text-[9px] text-ink-4 px-4 pb-1.5 pt-2.5"
        >
          Quick settings
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Theme
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <div
              class="flex flex-wrap gap-1"
            >
              <button
                aria-describedby="radix-_r_*_"
                aria-label="Light"
                aria-pressed="true"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-ink bg-ink font-medium text-paper"
                data-radix-popper-align="center"
                data-radix-popper-side="bottom"
                data-state="instant-open"
                data-testid="quick-settings-theme-light"
                type="button"
              >
                Light
              </button>
              <button
                aria-label="Dark"
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink"
                data-state="closed"
                data-testid="quick-settings-theme-dark"
                type="button"
              >
                Dark
              </button>
              <button
                aria-label="High contrast (light)"
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink"
                data-state="closed"
                data-testid="quick-settings-theme-hc-light"
                type="button"
              >
                HC light
              </button>
              <button
                aria-label="High contrast (dark)"
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink"
                data-state="closed"
                data-testid="quick-settings-theme-hc-dark"
                type="button"
              >
                HC dark
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Reading width
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <div
              class="flex gap-1"
            >
              <button
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink uppercase"
                data-testid="quick-settings-width-s"
                type="button"
              >
                S
              </button>
              <button
                aria-pressed="true"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-ink bg-ink font-medium text-paper uppercase"
                data-testid="quick-settings-width-m"
                type="button"
              >
                M
              </button>
              <button
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink uppercase"
                data-testid="quick-settings-width-l"
                type="button"
              >
                L
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Focus mode
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <button
              aria-checked="false"
              aria-label="Focus mode"
              class="relative inline-flex h-6 w-11 shrink-0 items-center rounded-full border transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink border-rule bg-paper-2"
              data-testid="quick-settings-focus-toggle"
              role="switch"
              type="button"
            >
              <span
                aria-hidden="true"
                class="absolute top-[1px] left-[1px] h-5 w-5 rounded-full bg-paper transition-transform translate-x-0"
              />
            </button>
          </div>
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Floating toolbar
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <button
              aria-checked="false"
              aria-label="Floating toolbar"
              class="relative inline-flex h-6 w-11 shrink-0 items-center rounded-full border transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink border-rule bg-paper-2"
              data-testid="quick-settings-floating-toolbar-toggle"
              role="switch"
              type="button"
            >
              <span
                aria-hidden="true"
                class="absolute top-[1px] left-[1px] h-5 w-5 rounded-full bg-paper transition-transform translate-x-0"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="px-4 pt-3"
      >
        <div
          class="mb-3 last:mb-0"
        >
          <div
            class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
          >
            This doc
          </div>
          <ul
            class="mt-1 flex flex-col"
          >
            <li>
              <button
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-left text-[14px] text-ink hover:bg-paper-2"
                data-testid="mobile-more-inspector"
                type="button"
              >
                Doc inspector
              </button>
            </li>
          </ul>
        </div>
        <div
          class="mb-3 last:mb-0"
        >
          <div
            class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
          >
            This space
          </div>
          <ul
            class="mt-1 flex flex-col"
          >
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/s/s1/settings"
                type="button"
              >
                Space settings
              </a>
            </li>
          </ul>
        </div>
        <div
          class="mb-3 last:mb-0"
        >
          <div
            class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
          >
            App
          </div>
          <ul
            class="mt-1 flex flex-col"
          >
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/settings"
                type="button"
              >
                Universal settings
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/about"
                type="button"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/help"
                type="button"
              >
                Help & shortcuts
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/help/whats-new"
                type="button"
              >
                What's new
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/settings?tab=accessibility"
                type="button"
              >
                Accessibility
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/settings?tab=account"
                type="button"
              >
                Account
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                href="https://github.com/DopaMindLabs/Writer/issues/new"
                rel="noopener noreferrer"
                target="_blank"
                type="button"
              >
                Contact
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot > matches the space-level sheet with no active doc 1`] = `
<div
  aria-labelledby="radix-_r_*_"
  class="fixed inset-x-0 bottom-0 z-50 flex max-h-[80vh] flex-col rounded-t-2xl bg-paper pb-[env(safe-area-inset-bottom)] shadow-xl md:hidden data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=open]:slide-in-from-bottom data-[state=closed]:slide-out-to-bottom duration-200"
  data-state="open"
  data-testid="mobile-more-sheet"
  id="radix-_r_*_"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <h2
    class="sr-only"
    id="radix-_r_*_"
  >
    More
  </h2>
  <div
    aria-hidden="true"
    class="mx-auto mt-2 h-1 w-9 rounded-full bg-rule"
  />
  <div
    class="min-h-0 flex-1 overflow-y-auto overscroll-contain"
  >
    <div
      class="pb-3"
    >
      <div
        data-testid="mobile-more-quick-settings"
      >
        <div
          class="font-mono uppercase tracking-[0.11em] text-[9px] text-ink-4 px-4 pb-1.5 pt-2.5"
        >
          Quick settings
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Theme
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <div
              class="flex flex-wrap gap-1"
            >
              <button
                aria-describedby="radix-_r_*_"
                aria-label="Light"
                aria-pressed="true"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-ink bg-ink font-medium text-paper"
                data-radix-popper-align="center"
                data-radix-popper-side="bottom"
                data-state="instant-open"
                data-testid="quick-settings-theme-light"
                type="button"
              >
                Light
              </button>
              <button
                aria-label="Dark"
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink"
                data-state="closed"
                data-testid="quick-settings-theme-dark"
                type="button"
              >
                Dark
              </button>
              <button
                aria-label="High contrast (light)"
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink"
                data-state="closed"
                data-testid="quick-settings-theme-hc-light"
                type="button"
              >
                HC light
              </button>
              <button
                aria-label="High contrast (dark)"
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink"
                data-state="closed"
                data-testid="quick-settings-theme-hc-dark"
                type="button"
              >
                HC dark
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Reading width
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <div
              class="flex gap-1"
            >
              <button
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink uppercase"
                data-testid="quick-settings-width-s"
                type="button"
              >
                S
              </button>
              <button
                aria-pressed="true"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-ink bg-ink font-medium text-paper uppercase"
                data-testid="quick-settings-width-m"
                type="button"
              >
                M
              </button>
              <button
                aria-pressed="false"
                class="inline-flex items-center justify-center border px-3.5 py-1.5 text-[12px] tracking-[0.01em] transition-colors border-rule bg-paper text-ink hover:border-ink uppercase"
                data-testid="quick-settings-width-l"
                type="button"
              >
                L
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Focus mode
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <button
              aria-checked="false"
              aria-label="Focus mode"
              class="relative inline-flex h-6 w-11 shrink-0 items-center rounded-full border transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink border-rule bg-paper-2"
              data-testid="quick-settings-focus-toggle"
              role="switch"
              type="button"
            >
              <span
                aria-hidden="true"
                class="absolute top-[1px] left-[1px] h-5 w-5 rounded-full bg-paper transition-transform translate-x-0"
              />
            </button>
          </div>
        </div>
        <div
          class="grid grid-cols-[1fr_auto] items-center gap-3 border-b border-rule/60 px-4 min-h-11 py-3"
        >
          <div
            class="min-w-0 pt-px"
          >
            <div
              class="text-[14px] font-medium text-ink"
            >
              Floating toolbar
            </div>
          </div>
          <div
            class="flex shrink-0 items-center justify-end"
          >
            <button
              aria-checked="false"
              aria-label="Floating toolbar"
              class="relative inline-flex h-6 w-11 shrink-0 items-center rounded-full border transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink border-rule bg-paper-2"
              data-testid="quick-settings-floating-toolbar-toggle"
              role="switch"
              type="button"
            >
              <span
                aria-hidden="true"
                class="absolute top-[1px] left-[1px] h-5 w-5 rounded-full bg-paper transition-transform translate-x-0"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="px-4 pt-3"
      >
        <div
          class="mb-3 last:mb-0"
        >
          <div
            class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
          >
            This space
          </div>
          <ul
            class="mt-1 flex flex-col"
          >
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/s/s1/settings"
                type="button"
              >
                Space settings
              </a>
            </li>
          </ul>
        </div>
        <div
          class="mb-3 last:mb-0"
        >
          <div
            class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
          >
            App
          </div>
          <ul
            class="mt-1 flex flex-col"
          >
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/settings"
                type="button"
              >
                Universal settings
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/about"
                type="button"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/help"
                type="button"
              >
                Help & shortcuts
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/help/whats-new"
                type="button"
              >
                What's new
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/settings?tab=accessibility"
                type="button"
              >
                Accessibility
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                data-discover="true"
                href="/settings?tab=account"
                type="button"
              >
                Account
              </a>
            </li>
            <li>
              <a
                class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
                href="https://github.com/DopaMindLabs/Writer/issues/new"
                rel="noopener noreferrer"
                target="_blank"
                type="button"
              >
                Contact
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
